- MANTA-239 Use RNA bam alignments for ref read scoring
v0.26.3
- Fix OSX build and demo run (req. update to boost 1.56)
- Update travis CI OSX build, static analyzer
v0.26.2
- MANTA-242 cleanup code portability and documentation:
-- Updated all build/installation and contributor guidelines
-- Updated Manta user guide
-- Added Travis CI configuration file for clang/gcc build and demo run
-- Minor code edits to clean compile on OS X 10.9, CentOS 5,6,7, Ubuntu
12.04 and 14.04
-- Updated demo: new dataset covers COSMIC HCC1954 variants, added test
to verify expected output from demo run.
v0.26.1
- Remove python reflection from run configuration process, fixes rare
config issue
- VCF output formatting: FileData corrected to FileDate
v0.26.0
- MANTA-224 improve short-fragment handling for RNA
- MANTA-235 kmer reference mask to accelerate RNA contig alignments
- MANTA-232 filter large SVs with no read pair support
- MANTA-236 expand conditions for large insertion search to normalize
BWA-mem/Isaac performance
- MANTA-231 expand scoring phase split read search around breakends to
find soft clipped ref and alt support.
- MANTA-234 remove discovery pair counts from scored output files
- MANTA-222 support bwa-mem '-M' split read format
- MANTA-218 filter spanning candidates without significant signal/noise
- MANTA-155 handle N's and lowqual bases during assembly
- MANTA-219 Build system improvements for auditing, visual studio support
- MANTA-217 Improve runtime for large min candidate size settings, creating
a high speed large-event mode.
v0.25.0
- RNA - parameter adjustments, additional vcf output, orientation fixes
- MANTA-187 treat split reads symmetrically to improve RNA fusion detection
-- detect split reads directly rather than via associated soft-clip sequence
-- exclude split reads from contributing to local assembly evidence
v0.24.0
- MANTA-213 FFPE runtime optimization:
-- Recognize new BAM format for fragments shorter than read length,